--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,10 @@
 }
 
 #levelTxt {
-    width: 1280px;
-    height: 400px;
-    margin-bottom: 100px;
+    width: 95%;
+    height: 100px;
+    position: absolute;
+    background: black;
+    color: green;
+    bottom: 0;
 }
